# pokemon_ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
learn/: digits-keras.py  digits-random-forest.py  digits-sklearn-nn.py  numpy-sklearn-nn.py
pokemon_ai/: logger.py  main.py
pokemon_ai/dqn/: experience.py  opponents.py  trainer.py  utils.py  value_function_agent.py
pokemon_ai/simulator/: agent.py  battle.py  battle_simplified.py  constant.py  damage.py  moves.py  player.py  pokedex.py  sample_agents.py  sample_players.py  typechart.py
tests/simulator/: battle_test.py  damage_test.py  player_test.py  pokedex_test.py
